[Aalekh] ADD: Added associations for celebrities with movies
